# AI-Content-Writer-CrewAI

./: .env  README.md  main.py
crewai_content_writer/: README.md  essay.md  pyproject.toml  requirements.txt
crewai_content_writer/src/crewai_content_writer/: crew.py  main.py
crewai_content_writer/src/crewai_content_writer/config/: agents.yaml  tasks.yaml
