[project]
name = "crewai_content_writer"
version = "0.1.0"
description = "CrewAI-Content-Writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crewai_content_writer = "crewai_content_writer.main:run"
run_crew = "crewai_content_writer.main:run"
train = "crewai_content_writer.main:train"
replay = "crewai_content_writer.main:replay"
test = "crewai_content_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
